--- a/src/components/custom-button/custom-button.styles.scss
+++ b/src/components/custom-button/custom-button.styles.scss
@@ -1,4 +1,4 @@
-.custom-button {
+button {
   min-width: 165px;
   width: auto;
   height: 50px;
@@ -20,7 +20,7 @@
     border: 1px solid black;
   }
 
-  &.google-sign-in {
+  &.google-sign-incustom-button {
     background-color: #4285f4;
     color: white;
 
