--- a/src/components/custom-button/custom-button.styles.scss
+++ b/src/components/custom-button/custom-button.styles.scss
@@ -1,4 +1,4 @@
-button {
+.custom-button {
   min-width: 165px;
   width: auto;
   height: 50px;
@@ -13,6 +13,8 @@ button {
   font-weight: bolder;
   border: none;
   cursor: pointer;
+  display: flex;
+  justify-content: center;
 
   &:hover {
     background-color: white;
@@ -20,12 +22,24 @@ button {
     border: 1px solid black;
   }
 
-  &.google-sign-incustom-button {
+  &.google-sign-in {
     background-color: #4285f4;
     color: white;
 
     &:hover {
       background-color: #357ae8;
+      border: none;
+    }
+  }
+
+  &.inverted {
+    background-color: white;
+    color: black;
+    border: 1px solid black;
+
+    &:hover {
+      background-color: black;
+      color: white;
       border: none;
     }
   }
